# agentstr-sdk

./: .gitignore  README.md  agentstr_local.db  aws_manage_parameter_store.py  aws_manage_secrets.py  azure_manage_key_vault.py  generate-docs.sh  pyproject.toml
.github/scripts/: bump_patch.py
.github/workflows/: ci.yml  deploy-aws.yml  deploy-azure.yml  deploy-cookbook-mcp-bitcoin-aws.yml  deploy-cookbook-mcp-exchange-rate-aws.yml  deploy-cookbook-mcp-web-search-aws.yml  deploy-gcp.yml
configs/: aws.yml  azure.yml  gcp.yml
cookbook/: README.md
cookbook/agents/medical/: README.md  agent.py  pyproject.toml  test.py
cookbook/agents/news/: .env.sample  README.md  agent.py  pyproject.toml  test.py
cookbook/agents/nostr_rag/: .env.sample  README.md  agent.py  pyproject.toml  test.py
cookbook/agents/travel/: README.md  agent.py  pyproject.toml  test.py
cookbook/mcp_servers/exchange_rate/: .env.sample  README.md  deploy.yml  nostr-metadata.yml  pyproject.toml  requirements.txt  server.py  test.py
docs/: requirements.txt
docs/source/: advanced.agent_providers.rst  advanced.commands.rst  advanced.cookbook.rst  advanced.core_components.rst  advanced.mcp.rst  advanced.payments.rst  advanced.persistence.rst  advanced.rst  advanced.scheduling.rst  agentstr.a2a.rst  agentstr.agents.agentstr.rst  agentstr.agents.nostr_agent.rst  agentstr.agents.nostr_agent_server.rst  agentstr.agents.nostr_rag.rst  agentstr.agents.providers.agno.rst  agentstr.agents.providers.dspy.rst  agentstr.agents.providers.google.rst  agentstr.agents.providers.langgraph.rst  agentstr.agents.providers.openai.rst  agentstr.agents.providers.pydantic.rst  agentstr.agents.providers.rst  agentstr.agents.rst  agentstr.cli.rst  (+39 more)
examples/: .env.sample  agno_agent.py  chat_with_agents.py  commands_client.py  commands_server.py  custom_commands.py  database.py  dspy_agent.py  google_agent.py  langgraph_agent.py  mcp_client.py  mcp_server.py  nostr_langgraph_agent.py  openai_agent.py  pydantic_agent.py  rag.py
getting_started/: README.md
hello_world/: .gitignore  README.md  deploy.yml  main.py  test_client.py
integration/: test_nwc_relay.py
tests/: .env.sample  test_database.py  test_messaging.py  test_metadata.py
workflows/: deploy-aws.template.yml  deploy-azure.template.yml  deploy-gcp.template.yml
(+153 files in other folders)
