[project]
name = "news-agent"
version = "0.1.0"
description = "A news agent for agentstr."
dependencies = [
    "python-dotenv",
    "langchain-core",
    "pynostr",
    "langgraph",
    "langchain-openai",
    "agentstr @ {root:uri}/../../..",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
