[project]
name = "travel-agent"
version = "0.1.0"
description = "A travel agent for agentstr."
dependencies = [
    "python-dotenv",
    "pynostr",
    "langchain-openai",
    "pydantic",
    "dspy-ai",
    "agentstr @ {root:uri}/../../..",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
